crates/ink/tests/ui/contract/fail/message/message-returns-non-codec.stderr
error[E0277]: the trait bound `NonCodecType: WrapperTypeEncode` is not satisfied
  --> tests/ui/contract/fail/message/message-returns-non-codec.rs:18:34
   |
18 |         pub fn message(&self) -> NonCodecType {
   |                                  ^^^^^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `NonCodecType`
   |
   = help: the following other types implement trait `WrapperTypeEncode`:
             &T
             &mut T
             Arc<T>
             Box<T>
             Cow<'_, T>
             Rc<T>
             String
             Vec<T>
           and $N others
   = note: required for `NonCodecType` to implement `Encode`
note: required by a bound in `DispatchOutput`
  --> src/codegen/dispatch/type_check.rs
   |
   | pub struct DispatchOutput<T>(T)
   |            -------------- required by a bound in this struct
   | where
   |     T: scale::Encode + 'static;
   |        ^^^^^^^^^^^^^ required by this bound in `DispatchOutput`

error[E0277]: the trait bound `Result<NonCodecType, LangError>: Encode` is not satisfied
 --> tests/ui/contract/fail/message/message-returns-non-codec.rs:3:1
  |
3 | #[ink::contract]
  | ^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `Result<NonCodecType, LangError>`
  |
  = help: the trait `Encode` is implemented for `Result<T, E>`
note: required by a bound in `return_value`
 --> $WORKSPACE/crates/env/src/api.rs
  |
  | pub fn return_value<R>(return_flags: ReturnFlags, return_value: &R)
  |        ------------ required by a bound in this function
  | where
  |     R: scale::Encode,
  |        ^^^^^^^^^^^^^ required by this bound in `return_value`
  = note: this error originates in the attribute macro `ink::contract` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `try_invoke` exists for struct `CallBuilder<DefaultEnvironment, Set<Call>, Set<ExecutionInput<ArgumentList<ArgumentListEnd, ArgumentListEnd, Ink>, Ink>>, Set<ReturnType<NonCodecType>>>`, but its trait bounds were not satisfied
  --> tests/ui/contract/fail/message/message-returns-non-codec.rs:18:9
   |
6  |       pub struct NonCodecType;
   |       ----------------------- doesn't satisfy `NonCodecType: AbiDecodeWith<ink::abi::Ink>`, `NonCodecType: DecodeMessageResult<ink::abi::Ink>` or `NonCodecType: WrapperTypeDecode`
...
18 | /         pub fn message(&self) -> NonCodecType {
19 | |             NonCodecType
20 | |         }
   | |_________^
   |
  ::: $RUST/core/src/result.rs
   |
   |   pub enum Result<T, E> {
   |   --------------------- doesn't satisfy `_: Decode`
   |
   = note: the following trait bounds were not satisfied:
           `Result<NonCodecType, LangError>: ink::parity_scale_codec::Decode`
           which is required by `NonCodecType: DecodeMessageResult<ink::abi::Ink>`
           `NonCodecType: WrapperTypeDecode`
           which is required by `NonCodecType: AbiDecodeWith<ink::abi::Ink>`
note: the trait `WrapperTypeDecode` must be implemented
  --> $CARGO/parity-scale-codec-3.7.4/src/codec.rs
   |
   | pub trait WrapperTypeDecode: Sized {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
